# dvsynth

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml  format.yml
demos/: demo-linting.mov
doc/: katex.html
src/: graph.rs  main.rs  style.rs  util.rs
src/graph/: alloc.rs  mod.rs
src/node/: array_constructor.rs  behaviour.rs  binary_op.rs  constant.rs  counter.rs  debug.rs  list_constructor.rs  mod.rs  ty.rs  window.rs
src/node/behaviour/: array_constructor.rs  binary_op.rs  constant.rs  counter.rs  debug.rs  list_constructor.rs  window.rs
src/node/ty/: array.rs  list.rs  mod.rs  option.rs  primitive.rs  ptr.rs  reference.rs  texture.rs
src/widgets/: floating_panes.rs  layout.rs  margin.rs  mod.rs  node.rs  pane_collection.rs
