[package]
name = "dvsynth"
version = "0.1.0"
authors = ["Jakub Hlusička <jakub.hlusicka@email.cz>"]
license = "AGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["iced/debug"]

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git" }
iced_native = { git = "https://github.com/hecrj/iced.git" }
iced_graphics = { git = "https://github.com/hecrj/iced.git" }
iced_wgpu = { git = "https://github.com/hecrj/iced.git" }
vek = "0.12"
ordered-float = "2"
petgraph = "0.5"
