[package]
name = "dvsynth"
version = "0.1.0"
authors = ["Jakub Hlusička <jakub.hlusicka@email.cz>"]
license = "AGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["iced/debug"]

[dependencies]
iced = { git = "https://github.com/Limeth/iced.git", features = ["canvas"] }
iced_graphics = { git = "https://github.com/Limeth/iced.git", features = ["canvas"] }
iced_native = { git = "https://github.com/Limeth/iced.git" }
iced_wgpu = { git = "https://github.com/Limeth/iced.git", features = ["canvas"] }
byteorder = "1"
indexmap = "1.6"
lyon_geom = "0.16"
ordered-float = "2"
paste = "1.0"
petgraph = "0.5"
roots = "*"
smallvec = "1.4"
vek = "0.12"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "doc/katex.html" ]
