[package]
name = "dvsynth"
version = "0.1.0"
authors = ["Jakub Hlusička <jakub.hlusicka@email.cz>"]
license = "AGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["iced/debug"]

[dependencies]
iced = { git = "https://github.com/Limeth/iced.git", branch = "feature-event-handler", features = ["canvas"] }
iced_graphics = { git = "https://github.com/Limeth/iced.git", branch = "feature-event-handler", features = ["canvas"] }
iced_native = { git = "https://github.com/Limeth/iced.git", branch = "feature-event-handler" }
iced_wgpu = { git = "https://github.com/Limeth/iced.git", branch = "feature-event-handler", features = ["canvas"] }
iced_winit = { git = "https://github.com/Limeth/iced.git", branch = "feature-event-handler" }
iced_futures = { git = "https://github.com/Limeth/iced.git", branch = "feature-event-handler" }
arc-swap = "0.4.7"
byteorder = "1"
downcast-rs = "1.2.0"
dyn-clone = "1.0.3"
flume = { version = "0.9.1", default-features = false }
indexmap = "1.6"
lyon_geom = "0.16"
ordered-float = "2"
paste = "1.0"
petgraph = "0.5"
roots = "*"
smallvec = "1.4"
static_assertions = "1.1.0"
vek = "0.12"
sharded-slab = "0.1.0"
lazy_static = "1.4.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "doc/katex.html" ]
